Working spatial audio at last

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -13,5 +13,7 @@
     </style>
   </head>
   <body>
+      <div id="label"></div>
+      <button class="button" id="start">LOADING...</button>
   </body>
 </html>
