--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"/><title>Basic App</title><style>body{margin:0}canvas{display:block}</style></head><body><div id="label"></div><button class="button" id="start">LOADING...</button><script src="bundle.js"></script></body></html>
+<!doctype html><html><head><meta charset="utf-8"/><title>Basic App</title><style>body{margin:0}canvas{display:block}</style></head><body><script src="bundle.js"></script></body></html>
