--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,8 +10,15 @@
       canvas {
         display: block;
       }
+      #blocker {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				background-color: rgba(0,0,0,0.5);
+			}
     </style>
   </head>
   <body>
+    <div id="blocker"></div>
   </body>
 </html>
