--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"/><title>Basic App</title><style>body{margin:0}canvas{display:block}</style></head><body><script src="bundle.js"></script></body></html>
+<!doctype html><html><head><meta charset="utf-8"/><title>Basic App</title><style>body{margin:0}canvas{display:block}#blocker{position:absolute;width:100%;height:100%;background-color:rgba(0,0,0,.5)}</style></head><body><div id="label"></div><button class="button" id="start">LOADING...</button><div id="blocker"></div><script src="bundle.js"></script></body></html>
