--- a/client/src/index.html
+++ b/client/src/index.html
@@ -11,11 +11,11 @@
         display: block;
       }
       #blocker {
-				position: absolute;
-				width: 100%;
-				height: 100%;
-				background-color: rgba(0,0,0,0.5);
-			}
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+      }
     </style>
   </head>
   <body>
